fixed scrollbar

--- a/Kalorilaskuri/kalorilaskuri/static/css/style.css
+++ b/Kalorilaskuri/kalorilaskuri/static/css/style.css
@@ -15,7 +15,7 @@ body {
     text-align: center;
     font-size: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-
+    overflow: overlay;
 }
 
 
@@ -41,13 +41,11 @@ body {
       margin-bottom: 20px;
   }
 
-  .responsive {
-    width: auto;
-    height: auto;
-  }
-  @media only screen and (max-width: 760px) {
+
+@media only screen and (max-width: 760px) {
     .header-img {
         width: 70vw;
+        display: none;
     }
 }
 
@@ -107,3 +105,4 @@ footer {
     left: 0;
     
 }
+
